Added font family to buttons in CSS

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -245,6 +245,10 @@ label.checkbox > input:checked + span::after {
     opacity: 1;
 }
 
+button {
+    font-family: "Lato", sans-serif;
+}
+
 button:disabled {
     opacity: 0.6;
 }
