--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -902,6 +902,47 @@ button:disabled {
     text-align: center;
 }
 
+#lobby-hover-to-show-code {
+    position: relative;
+}
+
+#lobby-hover-to-show-code #lobby-hidden-code-message,
+#lobby-hover-to-show-code #lobby-room-code {
+    display: inline-block;
+    cursor: default;
+}
+
+#lobby-hover-to-show-code #lobby-hidden-code-message {
+    transition: transform 0.1s;
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+}
+
+#lobby-hover-to-show-code #lobby-hidden-code-message.is-hover {
+    transform: scale(0.95);
+    transition: transform 0.4s ease-in;
+}
+
+/*#hover-to-show-code #hidden-code-message,*/
+#lobby-hover-to-show-code #lobby-room-code {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+
+    transition: opacity 0s;
+}
+
+#lobby-hover-to-show-code #lobby-room-code.visible {
+    transition: opacity 0.2s ease-in;
+}
+
+#lobby-hidden-code-message:not(.visible),
+#lobby-room-code:not(.visible) {
+    opacity: 0;
+}
+
 .leave-button {
     color: white;
     background-color: #DE2D48;
