Finalizing Question V1 Form but bug with sequelize auto created at updated at with join tables

--- a/back-office/templates/category/show.html.twig
+++ b/back-office/templates/category/show.html.twig
@@ -16,12 +16,8 @@
                 <td>{{ category.name }}</td>
             </tr>
             <tr>
-                <th>CreatedAt</th>
-                <td>{{ category.createdAt ? category.createdAt|date('Y-m-d H:i:s T') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ category.updatedAt ? category.updatedAt|date('Y-m-d H:i:s T') : '' }}</td>
+                <th>Label</th>
+                <td>{{ category.label }}</td>
             </tr>
         </tbody>
     </table>
