--- a/back-office/templates/category/index.html.twig
+++ b/back-office/templates/category/index.html.twig
@@ -10,8 +10,7 @@
             <tr>
                 <th>Id</th>
                 <th>Name</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
+                <th>Label</th>
                 <th>actions</th>
             </tr>
         </thead>
@@ -20,8 +19,7 @@
             <tr>
                 <td>{{ category.id }}</td>
                 <td>{{ category.name }}</td>
-                <td>{{ category.createdAt ? category.createdAt|date('Y-m-d H:i:s T') : '' }}</td>
-                <td>{{ category.updatedAt ? category.updatedAt|date('Y-m-d H:i:s T') : '' }}</td>
+                <td>{{ category.label }}</td>
                 <td>
                     <a href="{{ path('category_show', {'id': category.id}) }}">show</a>
                     <a href="{{ path('category_edit', {'id': category.id}) }}">edit</a>
@@ -29,7 +27,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="5">no records found</td>
+                <td colspan="4">no records found</td>
             </tr>
         {% endfor %}
         </tbody>
