--- a/back-office/templates/question/index.html.twig
+++ b/back-office/templates/question/index.html.twig
@@ -35,9 +35,64 @@
                     {% endfor %}
                 </td>
                 <td>{{ question.content }}</td>
-                <td>{{ question.answer ? question.answer|json_encode : '' }}</td>
+{#                <td>{{ question.answer ? question.answer|json_encode : '' }}</td>#}
+                <td>
+                    <table>
+                        {% for key, field in question.answer %}
+                            {% if key == 'answers' %}
+                                <tr>
+                                    <th>answers</th>
+                                    <td>
+                                        <table>
+                                            {% for answer in field %}
+                                                <tr>
+                                                    {% for key, answerField in answer %}
+                                                        <td>
+                                                            {% if key == 'content' %}
+                                                                {{ answerField }}
+                                                            {% elseif key == 'is_good_answer' and answerField %}
+                                                                (Bonne réponse)
+                                                            {% endif %}
+                                                        </td>
+                                                    {% endfor %}
+                                                </tr>
+                                            {% endfor %}
+                                        </table>
+                                    </td>
+                                </tr>
+                            {% elseif key == 'additional' %}
+                                <tr>
+                                    <th>additional</th>
+                                    <td>
+                                        <table>
+                                            {% for additional in field %}
+                                                {% for key, additionalField in additional %}
+                                                    <tr>
+                                                        <td>
+                                                            {{ key }} : {{ additionalField }}
+                                                        </td>
+                                                    </tr>
+                                                {% endfor %}
+                                            {% endfor %}
+                                        </table>
+                                    </td>
+                                </tr>
+                            {% endif %}
+                        {% endfor  %}
+                    </table>
+                </td>
                 <td>{{ question.status }}</td>
-                <td>{{ question.media ? question.media|json_encode : '' }}</td>
+{#                <td>{{ question.media ? question.media|json_encode : '' }}</td>#}
+                <td>
+                    <table>
+                        {% for key, field in question.media %}
+                            <tr>
+                                <th>{{ key }} </th>
+                                <td>{{ field }}</td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </td>
                 <td>{{ question.createdAt ? question.createdAt|date('Y-m-d H:i:s T') : '' }}</td>
                 <td>{{ question.updatedAt ? question.updatedAt|date('Y-m-d H:i:s T') : '' }}</td>
                 <td>
