--- a/back-office/templates/question/new.html.twig
+++ b/back-office/templates/question/new.html.twig
@@ -5,7 +5,67 @@
 {% block body %}
     <h1>Create new Question</h1>
 
-    {{ include('question/_form.html.twig') }}
+{#    {{ include('question/_form.html.twig') }}#}
+
+    <form action='{{ path('question_new', {id: question.id})}}' method="post">
+        <label for="question-content">Question :</label>
+        <textarea id="question-content" name="question-content" required></textarea>
+        <label for="question-type-select">Type</label>
+        {% for type in questionTypes %}
+            <input type="checkbox" id="cbx-type-{{ type.name }}"
+                       name="cbx-type-{{ type.name }}" value="{{ type.name }}">
+            <label for="cbx-type-{{ type.name }}">{{ type }}</label>
+        {% endfor %}
+        <div>
+            {% for category in categories %}
+                <input type="checkbox" id="cbx-category-{{ category.name }}" name="cbx-category-{{ category.name }}" value="{{ category.name }}">
+                <label for="cbx-category-{{ category.name }}">{{ category }}</label>
+            {% endfor %}
+        </div>
+        <p>Réponses</p>
+        {% for i in 0..3 %}
+            <div>
+                <input type="text" name="answers-content-{{ loop.index }}" id="answer-{{ loop.index }}"/>
+
+                <input type="radio" id="good-answer-radio-{{ loop.index }}" name="answers-is_good_answer-{{ loop.index }}" value="1"/>
+                <label for="good-answer-radio-{{ loop.index }}">Bonne réponse</label>
+
+                <input type="radio" id="bad-answer-radio-{{ loop.index }}" name="answers-is_good_answer-{{ loop.index }}" value="0"/>
+                <label for="bad-answer-radio-{{ loop.index }}">Mauvaise réponse</label>
+            </div>
+        {% endfor %}
+        <div>
+            <label for="additional-response_media-info">Information supplémentaire</label>
+            <textarea name="additional-response_media-info"
+                      id="additional-response_media-info"
+            ></textarea>
+        </div>
+        {#        <div>#}
+        {#        TODO RESPONSE MEDIA FILE INPUT #}
+        {#        </div>#}
+        <div>
+            <label for="question-difficulty-select">Difficulté</label>
+            <select name="question-difficulty" id="question-difficulty-select">
+                {% for difficulty in questionDifficulty %}
+                    <option value="{{ difficulty }}">{{ difficulty }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div>
+            <label for="question-status-select">Statut</label>
+            <select name="question-status" id="question-status-select">
+                {% for status in questionStatuses %}
+                    <option value="{{ status }}">{{ status }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        {#        {% if question.customQuiz %}#}
+        {#        TODO handling when changing a question Position. The position of the question below and above should move
+                   consequently #}
+        {#        {% endif %}#}
+        <input type="hidden" name="token" value="{{ csrf_token('question_new_token') }}"/>
+        <button type="submit">Envoyer</button>
+    </form>
 
     <a href="{{ path('question_index') }}">back to list</a>
 {% endblock %}
