Change JSON Structure

--- a/back-office/templates/question/edit.html.twig
+++ b/back-office/templates/question/edit.html.twig
@@ -53,7 +53,7 @@
             <label for="additional-response_media-info">Information supplémentaire</label>
             <textarea name="additional-response_media-info"
                       id="additional-response_media-info"
-            >{{ question.answer['additional']['responseMedia']['info'] ?? '' }}</textarea>
+            >{{ question.answer['additional']['response_media']['info'] ?? '' }}</textarea>
         </div>
 {#        <div>#}
 {#        TODO RESPONSE MEDIA FILE INPUT #}
