--- a/back-office/templates/user/edit.html.twig
+++ b/back-office/templates/user/edit.html.twig
@@ -6,7 +6,7 @@
     <h1>Edit User</h1>
 
     {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
-    <button>Password reset</button>
+    <button>Password reset</button>//TODO
 
     <a href="{{ path('user_index') }}">back to list</a>
 
