--- a/back-office/templates/security/login.html.twig
+++ b/back-office/templates/security/login.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Log in!{% endblock %}
 {% block stylesheets %} {{ encore_entry_link_tags('login') }} {% endblock %}
+
 {% block body %}
     <div class="container">
         <div class="row">
