--- a/back-office/templates/home/index.html.twig
+++ b/back-office/templates/home/index.html.twig
@@ -1,8 +1,12 @@
 {% extends 'base.html.twig' %}
 
+
 {% block title %}Hello HomeController!{% endblock %}
 
+{% block stylesheets %}{{ encore_entry_link_tags('home') }}{{ parent() }}{% endblock %}
 {% block body %}
+
+
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
@@ -11,10 +15,11 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
+    This friendly message is coming from:<i class="far fa-angry"></i>
     <ul>
         <li>Your controller at <code><a href="{{ '/app/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
         <li>Your template at <code><a href="{{ '/app/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
     </ul>
 </div>
 {% endblock %}
+{% block javascripts %}{{ encore_entry_script_tags('home') }}{{ parent() }}{% endblock %}
