--- a/back-office/templates/security/login.html.twig
+++ b/back-office/templates/security/login.html.twig
@@ -1,15 +1,19 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Log in!{% endblock %}
-{% block stylesheets %} {{ encore_entry_link_tags('login') }} {% endblock %}
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}Log in{% endblock %}</title>
+    {% block stylesheets %}{{ encore_entry_link_tags('login') }}{% endblock %}
+</head>
+<body>
 {% block body %}
     <div class="container">
         <div class="row">
             <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
                 <div class="card card-signin ">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Sign In</h5>
+                        <h5 class="card-title text-center">Connexion</h5>
                         <form class="form-signin" method="post">
                             {% if error %}
                                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -22,12 +26,12 @@
                             {% endif %}
                             <div class="form-label-group">
                                 <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
-                                <label for="inputUsername">Username</label>
+                                <label for="inputUsername">Identifiant</label>
                             </div>
 
                             <div class="form-label-group">
                                 <input type="password" name="password" id="inputPassword" class="form-control" required>
-                                <label for="inputPassword">Password</label>
+                                <label for="inputPassword">Mot de passe</label>
                             </div>
                             <hr class="my-4">
                             <input type="hidden" name="_csrf_token"
@@ -42,7 +46,7 @@
                                     </label>
                                 </div>
                             #}
-                            <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
+                            <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Connexion</button>
                         </form>
                     </div>
                 </div>
@@ -50,4 +54,7 @@
         </div>
     </div>
 {% endblock body %}
+</body>
 {% block javascripts %}{{ encore_entry_script_tags('login') }}{% endblock %}
+</html>
+
