--- a/back-office/templates/home/index.html.twig
+++ b/back-office/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block title %}Hello HomeController!{% endblock %}
 
-{% block stylesheets %}{{ encore_entry_link_tags('home') }}{{ parent() }}{% endblock %}
+{% block stylesheets %} {{ parent() }} {{ encore_entry_link_tags('home') }}{% endblock %}
 {% block body %}
 
 
@@ -22,4 +22,4 @@
     </ul>
 </div>
 {% endblock %}
-{% block javascripts %}{{ encore_entry_script_tags('home') }}{{ parent() }}{% endblock %}
+{% block javascripts %} {{ parent() }} {{ encore_entry_script_tags('home') }}{% endblock %}
