--- a/back-office/templates/base.html.twig
+++ b/back-office/templates/base.html.twig
@@ -6,15 +6,14 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
         {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
-
     </head>
     <body>
         <div class="wrapper">
-            {% include '/include/nav.html.twig' %}
+            {% include '/include/sidebar.html.twig' %}
             <div id="content-body">
                 {% block body %}{% endblock %}
             </div>
         </div>
-        {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
     </body>
+    {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
 </html>
